--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<H2>Features</H2>
  <!-- <div class="flex-container">  -->
 
-	  
+	  <div>
 	  <br>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
@@ -149,10 +149,8 @@
 </tbody>
 </table>
 		  
-		  
 
-
-
+</div>
 
 
 	<br>
@@ -162,12 +160,12 @@
  
 	
 	<div class="flex-container">
-  	  <div class="flex-item">
+
 	    <a href="/app/signup" class="button">
 	      Try for free
 	    </a>
   	  </div> 
-       </div>  
+ 
 <div class="flex-container">
  <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
 </div>
