--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
 
        </div>  
 			<H2>Features</H2>
- <!-- <div class="flex-container">  -->
-
-	  <div>
-	  <br>
+ <div class="flex-container">
 <style type="text/css">
 .tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
 .tg td{background-color:#EBF5FF;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#444;
@@ -150,7 +147,7 @@
 </table>
 		  
 
-</div>
+</div class="flex-container">
 
 
 	<br>
