--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
  <div class="flex-container">
 <style type="text/css">
 .tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
-.tg td{background-color:#006db5;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#444;
+.tg td{background-color:#ebf5ff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#444;
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{background-color:#409cff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#fff;
+.tg th{background-color:#006cab;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#fff;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg .tg-kw3o{border-color:#ebf5ff;text-align:center;vertical-align:middle}
 .tg .tg-yc31{background-color:#ffffff;border-color:#ffffff;font-size:18px;font-weight:bold;text-align:right;vertical-align:top}
