--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
 	<br>
 	
 
- 
-	
+
 	<div class="flex-container">
 
 	    <a href="/app/signup" class="button">
@@ -174,12 +173,9 @@
 			
 	<p align="center">
 	
-		Trusted by over 100,000 career seekers worldwide to help easily find their next job.
-		Apply to thousands of jobs at top tier companies and local companies alike with the click of a button.
+		Trusted by over 100,000 career seekers worldwide to find their next job at thousands of top tier companies with the click of a button.
 	</p>
 	
-	<!-- <div id="container"> -->
-
  
   <div class="flex-container">
   
