--- a/index.html
+++ b/index.html
@@ -161,22 +161,21 @@
 
 	<br>
 	<br>
-	
-
 
 	<div class="flex-container">
-
 	    <a href="/app/signup" class="button">
-	      Try for free
+	      Click Here, & Automate Your Search Today
 	    </a>
   	  </div> 
 			
-	<p align="center">
-	
-		Trusted by over 100,000 career seekers worldwide to find their next job at thousands of top tier companies with the click of a button.
-	</p>
-	
+	<br>
+	<br>
  
+ 
+<div class="flex-container">
+ <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
+</div>
+
   <div class="flex-container">
   
     <img class="flex-item" src="images/companiesLogos/Capital_One_logo.svg" height="145" />
@@ -200,14 +199,6 @@
     <img class="flex-item" src="images/companiesLogos/Whole_Foods_Market_logo.svg" height="120" />
   </div>
 
-	
-	
-
- 
-<div class="flex-container">
- <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
-</div>
-<!-- </div> -->
 	
 	
 	
