--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        </div>  
 			
 <div>
-<p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>2</sup></a>. Even the simplest of these online job applications can take minutes to complete, and that adds up! The average applicant will spend 7 or 8 hours per week searching for a job, and will spend 5 weeks unemployed with optimal conditions.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"><sup>1</sup></a>.  </p align="justify">
+<p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>2</sup></a>. Even the simplest online job applications can take minutes to complete, and the average applicant will spend 7 or 8 hours per week searching for a job...and can spend 5+ months unemployed- even in optimal conditions.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"><sup>1</sup></a>.  </p align="justify">
 	</div>	
 
 
