--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
 	<p align="justify">
 	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons before finding out that they only are willing to pay 50% of your diresired pay, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p><div class = "backgroundImage"  style = "max-width:25%;"> </div>
 		<br>
-	<p align="center">The best part? You'll never be asked to type in all your relevant work experience ever again.  
+	<H2>The best part? </H2>
+	<p align="center">You'll never be asked to type in all your relevant work experience ever again.  
 	Even better? We have a 100% money back satisfaction guaruntee.  
 	</p>
 		
-	<H2>Searching For A Job Shouldn't Be A Job.</H2>
+	
 	
 	<div class="flex-container">
 
 		<a href="/app/signup" class="button">Automate Your Job Search Now<a>
 
        </div>  
-			
+			<H2>Searching For A Job Shouldn't Be A Job.</H2>
 <div>
 <p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>2</sup></a>. Even the simplest online job applications can take minutes to complete, and the average applicant will spend 7 or 8 hours per week searching for a job...and can spend 5+ months unemployed- even in optimal conditions.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"><sup>1</sup></a>.  </p align="justify">
 	</div>	
