--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<br>
 	<H2>The best part? </H2>
 	<p align="center">You'll never be asked to type in all your relevant work experience ever again.  <br>
-	Even better? We have a 100% money back satisfaction guaruntee.<small><sup>t</sup></small>  
+	Even better? We have a 100% money back satisfaction guaruntee.<small><sup>.</sup></small>  
 	</p>
 		
 	
