--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
 	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p><div class = "backgroundImage"  style = "max-width:25%;"> </div>
 	
 		
-	<div class="flex-container">
 
-		<a href="/app/signup" class="button">Automate Your Job Search Now<a>
-
-       </div>  
 			
 		<br>
 				<H2>Features</H2>
@@ -148,9 +144,13 @@
 		<br>
 	<H2>The best part? </H2>
 	<p align="center">You'll never be asked to type in all your relevant work experience ever again.  <br>
-	Even better? We have a 100% money back satisfaction guaruntee.<small><sup>.</sup></small>  
+	Even better? We have a 100% money back satisfaction guaruntee.<small><sup>*</sup></small>  
 	</p>
-		
+			<div class="flex-container">
+
+		<a href="/app/signup" class="button">Automate Your Job Search Now<a>
+
+       </div>  
 	
 
 			<H2>Searching For A Job Shouldn't Be A Job.</H2>
