--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 <div class = "card">
 	
-	<H2>Searching for a job just got a whole lot easier.</H2>
+	<H1>Searching for a job just got a whole lot easier.</H1>
 
 	<p align="justify">
 	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p><div class = "backgroundImage"  style = "max-width:25%;"> </div>
@@ -142,7 +142,7 @@
 
 </div class="flex-container">
 		<br>
-	<H2>The best part? </H2>
+	<H1>The best part? </H1>
 	<p align="center">You'll never be asked to type in all your relevant work experience ever again.  <br>
 	Even better? We have a 100% money back satisfaction guaruntee.<small><sup>*</sup></small>  
 	</p>
@@ -151,32 +151,14 @@
 		<a href="/app/signup" class="button">Automate Your Job Search Now<a>
 
        </div>  
-	
-
-			<H2>Searching For A Job Shouldn't Be A Job.</H2>
+				
 <div>
 <p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>2</sup></a>. Even the simplest online job applications can take minutes to complete, and the average applicant will spend 7 or 8 hours per week searching for a job...and can spend 5+ months unemployed- even in optimal conditions.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"><sup>1</sup></a>.  </p align="justify">
 	</div>	
 
 
-	
-	<br>
+<br>
 
-		
-
-
-	<br>
-	<br>
-
-	<div class="flex-container">
-	    <a href="/app/signup" class="button">
-	      Click Here & Automate Your Search Today
-	    </a>
-  	  </div> 
-			
-	<br>
-	<br>
- 
  
 <div class="flex-container">
  <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
@@ -208,18 +190,10 @@
 	
 	
 	
-	<div class="flex-container">
-  	  <div class="flex-item">
-	    <a href="/app/signup" class="button">
-	      Try for free
-	    </a>
-  	  </div> 
-       </div>  
-	
-	    </div>
-	
-
-	
+<div class="flex-container">
+	<a href="/app/signup" class="button">Searching For A Job Shouldn't Be A Job, Automate It Now.<a>
+</div>
+<br>	
 </div class = "card">
 
 	    
