--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			
 		<br>
-				<H1>Features</H1>
+				<H1>The Easy Apply BotFeatures</H1>
  <div class="flex-container">
 <style type="text/css">
 .tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
