--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 	
 <div class = "card">
 	
-	<H1>Searching for a job just got a whole lot easier.</H1>
-
+<H1>Searching for a job just got a whole lot easier.</H1>
 	<p align="justify">
-	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading repeatedly filling out application forms and mashing a your way through a never-ending series of  buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p><div class = "backgroundImage"  style = "max-width:25%;"> </div>
-	
+		Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading repeatedly filling out application forms and mashing a your way through a never-ending series of  buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!
+	</p>		
 		
-
-			
-		<br>
-				<H1>The Easy Apply Bot Features</H1>
+<div class="flex-container">
+	<a href="/app/signup" class="button">Automate Your Job Search Now<a>
+</div>
+	<br>
+<H1>The Easy Apply Bot Features</H1>
  <div class="flex-container">
 <style type="text/css">
 .tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
@@ -125,7 +125,7 @@
   <tr>
     <td class="tg-yc31">Increases profile views</td>
     <td class="tg-y6ch"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-kw3o"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-kw3o"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-kw3o"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
 
   </tr>
@@ -188,8 +188,7 @@
   </div>
 
 	
-	
-	
+		
 <div class="flex-container">
 	<a href="/app/signup" class="button">Searching For A Job Shouldn't Be A Job, Automate It Now.<a>
 </div>
