--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <a href="/LinkedInClickerPage/">Home</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
+  <a href="/Download/FAQ.html">Download Now</a>
 </div class="topnav">
 	
 <div class = "card">
