--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   </tr>
   <tr>
-    <td class="tg-yc31"> Download on Chrome, Firefox,  &amp; More</td>
+    <td class="tg-yc31"> Easily Connect with Peers & Alumni</td>
     <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
