--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <tr>
     <td class="tg-yc31">Easily Apply to 1000's of Jobs</td>
     <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
 
   </tr>
@@ -87,6 +87,18 @@
     <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
 
+  </tr>
+  <tr>
+    <td class="tg-yc31"> Easily Connect with Peers</td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
+  </tr>
+  <tr>
+    <td class="tg-yc31">Works on PC, Mac, &amp; Linux</td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
     <td class="tg-tf03">Automatic Resume Parsing</td>
@@ -109,20 +121,7 @@
     <td class="tg-2bpi"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
 
   </tr>
-  <tr>
-    <td class="tg-yc31">Works on PC, Mac, &amp; Linux</td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
 
-  </tr>
-  <tr>
-    <td class="tg-yc31"> Easily Connect with Peers & Alumni</td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-
-  </tr>
   <tr>
     <td class="tg-yc31">Increases profile views</td>
     <td class="tg-y6ch"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
