--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -188,7 +188,9 @@ input {
 }
 </style>
 	
-					
+
+<p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>2</sup></a>. Even the simplest online job applications can take minutes to complete, and the average applicant will spend 7 or 8 hours per week searching for a job...and can spend 5+ months unemployed- even in optimal conditions.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"><sup>1</sup></a>.  </p align="justify">
+<br><br>	
 <p align="justify">While the Easy Apply Bot can do a whole host of things for you, the one thing it cannot (yet) do is make your profile and resume stand out from the crowd...and unless you've been living under a rock it's quite obvious that Linkedin is the place to be seen online when it comes to jobs and new careers. Did you know that a person with a fully optimised Linkedin profile is 40 times more likely to receive job opportunities via Linkedin?! After all you are competing against over 562 million users.
 	<br> 
 	<br>
