--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <BODY>
 
+	
 <div class = "header">
   <div class="flex-container">
     <br>
@@ -21,11 +22,13 @@
 
 
 <div class="topnav">
-  <a href="/LinkedInClickerPage/">Home</a>
+  <a href="/LinkedInClickerPage">Home</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
-  <a href="/Download/FAQ.html">Download Now</a>
-</div class="topnav">
+</div class="topnav">	
+	
+
+	  
 	
 <div class = "card">
 	
