--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
 
 <BODY>
 
-	
 <div class = "header">
   <div class="flex-container">
     <br>
     <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
     <h2 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h2>
-  <div>
+  </div>
 </div class = "header">
-
-
+	  
 <div class="topnav">
   <a href="/LinkedInClickerPage">Home</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">	
-	
-
-	  
+		  
 	
 <div class = "card">
 	
@@ -157,7 +153,9 @@
 <div class="flex-container">
  <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
 </div>
-
+<p align="justify">
+The Easy Apply Bot is Trusted by over 100,000 people worldwide to automate their job search. How do we do it? The answer is 
+</p align="justify">
   <div class="flex-container">
   
     <img class="flex-item" src="images/companiesLogos/Capital_One_logo.svg" height="145" />
