--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
     <h2 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h2>
-  </div>
+  <div>
 </div class = "header">
 	  
 <div class="topnav">
