--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</p>		
 		
 <div class="flex-container">
-	<a href="/app/signup" class="button">Automate Your Job Search Now<a>
+	<a href="/app/signup" class="button">Automate Your Job Search Now</a>
 </div>
 	<br>
 <H1>The Easy Apply Bot Features</H1>
@@ -141,7 +141,7 @@
 	</p>
 			<div class="flex-container">
 
-		<a href="/app/signup" class="button">Automate Your Job Search Now<a>
+		<a href="/app/signup" class="button">Automate Your Job Search Now</a>
 
        </div>  
 				
@@ -181,7 +181,7 @@ The Easy Apply Bot is Trusted by over 100,000 people worldwide to automate their
 	
 		
 <div class="flex-container">
-	<a href="/app/signup" class="button">Searching For A Job Shouldn't Be A Job, Automate It Now.<a>
+	<a href="/app/signup" class="button">Searching For A Job Shouldn't Be A Job, Automate It Now.</a>
 </div>
 		
 <br>	
