--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 	<br>
 <H1>The Easy Apply Bot Features</H1>
-
+<div class="flex-container">
 <style type="text/css">
 .tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
 .tg td{background-color:#ebf5ff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#444;
@@ -133,7 +133,7 @@
 </tbody>
 </table>
 		  
-
+</div class="flex-container">
 		<br>
 	<H1>The best part? </H1>
 	<p align="center">You'll never be asked to type in all your relevant work experience ever again.  <br>
