--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <a href="/LinkedInClickerPage">Home</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
+  <a href="/LinkedInClickerPage/Downlad.html">Download</a>
 </div class="topnav">	
 		  
 	
