--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 <H1>Searching for a job just got a whole lot easier.</H1>
 	<p align="justify">
-		Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading repeatedly filling out application forms and mashing a your way through a never-ending series of  buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!
+		Whether you're just starting to search a job or you've been searching already for months - applying to jobs all day is the worst. Easy Apply Bot is here to change that. Instead of repeatedly filling out application forms and mashing a your way through a never-ending series of  buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!
 	</p>		
 		
 <div class="flex-container">
