--- a/index.html
+++ b/index.html
@@ -154,7 +154,17 @@
  <img style = "border-radius: 20%;" src="images/app/HowitWorks.svg" />
 </div>
 <p align="justify">
-The Easy Apply Bot is Trusted by over 100,000 people worldwide to automate their job search. How do we do it? The answer is 
+The Easy Apply Bot is Trusted by over 100,000 people worldwide to automate their job search. How do we do it? We went create a data-driven 
+AI to automatically parse through ten-of-thousands of job applications and apply to those that meet you search criteria. Simply type the desired job title,
+minimum salary, and location and Easy Apply Bot does the hard work of applying to matching jobs.
+	<br><br>
+The Easy Apply automatically submits your application to jobs that score high on our proprietary score matrix Owand successively applies to the next highest position.
+Additionally, The Easy Apply Bot parses through your resume and automatically applies to position which you are qualified, but might have overlooked in order to get your 
+resume in front of as many rectruiters and HR team-members as possible.
+	<br><br>
+The Easy Apply Bot is the worldwide leader in automatic job applications. 
+	5,348,853 Applications and counting!
+	
 </p align="justify">
   <div class="flex-container">
   
