--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	<p align="justify">
 		Whether you're just starting to search a job or you've been searching already for months - applying to jobs all day is the worst. Easy Apply Bot is here to change that. Instead of repeatedly filling out application forms and mashing a your way through a never-ending series of  buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!
 	</p>		
-
+	<script src="./main.js" type="module"></script>
+	<script nomodule src="js/countUp.umd.js"></script>
+	<script nomodule src="js/main-for-legacy.js"></script>
 	<H2>Applications & Counting</H2>
 <div class="flex-container">
 
