--- a/FAQ.html
+++ b/FAQ.html
@@ -100,6 +100,32 @@
 </div>
 	
 	
+<button type="button" class="collapsible">System Requirements</button>
+<div class="content">
+
+
+	<H3>Windows</H3>
+
+Windows 8 or newer (Windows 7 should work too, but is not supported).
+
+<H3> Mac OS X<H3>
+
+Mac OS X 10.7 (Lion) or newer. 
+	
+	<H3>GNU/Linux</H3>
+Users have reported success on these platforms, but it is not tested nor supported on these systems. 
+
+</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	<button type="button" class="collapsible">Why use the Easy Apply Bot?</button>
 <div class="content">
 <p align="justify">	
